Corrected spacing on contact and projects

--- a/style.css
+++ b/style.css
@@ -242,6 +242,7 @@ body {
 
   .projectContainer h1 {
     font-size: 30px;
+    margin-top: +10%;
   }
   
   .projectContainer img {
@@ -265,6 +266,7 @@ body {
     font-family: 'Rosario', sans-serif;
     display: flex;
     justify-content: center;
+    margin-top: +10%;
   }
   
   .contactIcons {
@@ -315,6 +317,14 @@ body {
     font-size: 30px;
   }
 
+  .contactInfoContainer h1 {
+    margin-top: +5%;
+  }
+
+  .contactIcons {
+    margin-top: 70px;
+  }
+
   .techIcons img {
     height: 30px;
     margin-right: 20px;
@@ -322,6 +332,7 @@ body {
 
   .projectContainer h1 {
     font-size: 35px;
+    margin-top: +5%;
   }
   
   .projectContainer img {
